Vadim_Shishlo/13.Kubernetes.Helm/ingress/namespace.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: homework
  labels:
    name: homework
...
