Vadim_Shishlo/13.Kubernetes.Helm/ingress/ingress-wordpress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wpress
  namespace: homework
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "wpress.k8s-55.sa"
spec:
  rules:
    - host: wpress.k8s-56.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
...
